syntax = "proto3";

option csharp_namespace = "Microservice_map_info";

package distance;

service DistanceInfo{
	rpc GetDistance(Cities) returns (DistanceData);
}
message Cities{
	string originCity=1;
	string destinationCirt=2;
}
message DistanceData{
	string miles=1;
}
